Fixed VM Options
JFXTabPane Error does not happen anymore