@@ -33,6 +33,20 @@ dependencies {
 // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore
     implementation group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.14'
 
+    compile 'com.jfoenix:jfoenix:9.0.10'
+
+    run {
+    jvmArgs = [
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+        "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+                "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+                "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+            "--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
+            "--add-opens=javafx.controls/com.sun.javafx.scene.control=com.jfoenix"
+    ]
+}
+
 
 
 
@@ -46,7 +60,7 @@ application {
 
 javafx{
     version = "15.0.1"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base']
 }
 
 
